--- a/SvclogViewer/SvclogViewer.csproj
+++ b/SvclogViewer/SvclogViewer.csproj
@@ -114,6 +114,12 @@
   <ItemGroup>
     <Compile Include="Config\Configuration.cs" />
     <Compile Include="DefaultAssociationHelper.cs" />
+    <Compile Include="SvcAnalyzerDropper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SvcAnalyzerDropper.Designer.cs">
+      <DependentUpon>SvcAnalyzerDropper.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\TraceEvent.cs" />
+    <Compile Include="SvcAnalyzer.cs" />
     <Compile Include="SvcIndexer.cs" />
     <Compile Include="SwitchableTextBox.cs">
       <SubType>UserControl</SubType>
@@ -130,6 +137,9 @@
     <Compile Include="SwitchableTextBox.Designer.cs">
       <DependentUpon>SwitchableTextBox.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SvcAnalyzerDropper.resx">
+      <DependentUpon>SvcAnalyzerDropper.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
