--- a/SvclogViewer/SvclogViewer.csproj
+++ b/SvclogViewer/SvclogViewer.csproj
@@ -31,7 +31,7 @@
     <PublisherName>Tikkie</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>67</ApplicationRevision>
+    <ApplicationRevision>71</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -39,7 +39,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -66,7 +66,7 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>B4C5100E2ED9347F88CDAFCA04F07EEAD3FE528C</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>EDB501EE2E946250AF0FDDF2260AFB75F3345A6E</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>appicon.ico</ApplicationIcon>
@@ -254,7 +254,7 @@
     </PropertyGroup>
     <Message Text="Signing assembly post-compile..." />
     <!-- On AfterCompile we need to sign the executable that is in the obj/ dir, not the bin/ dir -->
-    <Exec Condition="Exists('$(ProjectDir)obj\$(PlatformName)\$(ConfigurationName)\$(TargetFileName)')" Command="&quot;$(SignToolPath)&quot; sign /i &quot;Certum&quot; /n &quot;Martijn Stolk&quot;  /v &quot;$(ProjectDir)obj\$(PlatformName)\$(ConfigurationName)\$(TargetFileName)&quot;" />
-    <Exec Condition="Exists('$(ProjectDir)obj\$(ConfigurationName)\$(TargetFileName)')" Command="&quot;$(SignToolPath)&quot; sign /i &quot;Certum&quot; /n &quot;Martijn Stolk&quot;  /v &quot;$(ProjectDir)obj\$(ConfigurationName)\$(TargetFileName)&quot;" />
+    <Exec Condition="Exists('$(ProjectDir)obj\$(PlatformName)\$(ConfigurationName)\$(TargetFileName)')" Command="&quot;$(SignToolPath)&quot; sign /i &quot;StartCom&quot; /n &quot;Martijn Stolk&quot;  /v &quot;$(ProjectDir)obj\$(PlatformName)\$(ConfigurationName)\$(TargetFileName)&quot;" />
+    <Exec Condition="Exists('$(ProjectDir)obj\$(ConfigurationName)\$(TargetFileName)')" Command="&quot;$(SignToolPath)&quot; sign /i &quot;StartCom&quot; /n &quot;Martijn Stolk&quot;  /v &quot;$(ProjectDir)obj\$(ConfigurationName)\$(TargetFileName)&quot;" />
   </Target>
 </Project>
